--- a/ZendeskSDKUIComponents.xcframework/ios-arm64_x86_64-simulator/ZendeskSDKUIComponents.framework/Localizable/nb.lproj/Localizable.strings
+++ b/ZendeskSDKUIComponents.xcframework/ios-arm64_x86_64-simulator/ZendeskSDKUIComponents.framework/Localizable/nb.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "zma_accessibility_guide_navigation_back" = "Tilbake";
-"zma_accessibility_guide_navigation_close" = "Lukke";
+"zma_accessibility_guide_navigation_close" = "Lukk";
 "zma_accessibility_guide_navigation_share" = "Del";
 "zma_add_attachments_button_accessibility_label" = "Legg til vedlegg";
 "zma_back_button_accessibility_label" = "Gå tilbake";
